updated users-service tests for ci/cd tests